<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Отели города</string>
    <string name="action_settings">Settings</string>
    <string name="distance">Дистанция: </string>
    <string name="numb_free_places">Свободных номеров: </string>
    <string name="sorting">Сортировать по:</string>
    <string name="info">more info</string>
    <string name="sort_numb">свободным номерам</string>
    <string name="sort_dist">дистанции</string>
    <string name="title_activity_more_info">Подробная информация</string>
    <string name="suites_availability">"Свободные номера-"</string>
    <string name="lat">"Широта:"</string>
    <string name="lon">"Долгота:"</string>
    <string name="title_activity_image_fullscreen">Просмотр изображения</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_test">Test</string>
    <string name="message_load_dada">Идет загрузка данных.\n Пожалуйста, подождите.</string>
    <string name="error_message_load_dada">Ошибка загрузка данных.\n Пожалуйста, повторите позже.</string>
    <string name="error_message_load_dada_image">Ошибка загрузка изображения.\n Пожалуйста, повторите позже.</string>
    <string name="hello_world">Hello world!</string>
    <string name="error_json_parse">Ошибка парсинга json</string>
    <string name="error_json_load">Ошибка загрузки json</string>
    <string name="metr">м</string>
    <string name="no_picture">Нет изображения</string>
    <string name="title_activity_image_full_screan">ImageFullScreanActivity</string>
    <string name="message_close_image">Нажмите на изображение, что бы его закрыть</string>
    <string name="name_hotels">Название отеля</string>
    <string name="address">Адрес</string>


</resources>
